<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/pagelogin"
    tools:context=".ui.LoginActivity">



    <ImageView
        android:id="@+id/imagelo"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/iconmodulinkv"
        android:contentDescription="@string/todo" />

    <ProgressBar
        android:id="@+id/progresbarlogin"
        android:layout_marginBottom="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:indeterminateDrawable="@drawable/ic_progrebar_curcle"
        style="?android:attr/progressBarStyle"
        android:layout_alignTop="@id/linear"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_person"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_person"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/et_nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/colorpurpleversi"
                android:hint="@string/NIM" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_password"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_security"
                android:contentDescription="TODO" />

            <EditText
                android:id="@+id/et_password"
                android:inputType="numberPassword"
                android:backgroundTint="@color/colorblack"
                android:textColor="@color/colorpurpleversi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pasword" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_login"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:src="@drawable/ic_login"
            android:textAllCaps="false"
            android:background="@drawable/ice_rec"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keterangan"
            android:textSize="10sp"
            android:gravity="center"
            android:layout_marginBottom="25dp"/>


    </LinearLayout>










</RelativeLayout>