<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pageprofil"
    tools:context=".ui.ProfilActivty">

    <ImageButton
        android:id="@+id/backhome"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_back"
        android:padding="16dp"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/iconmodulinkv"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cc_myfoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profil"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"/>

    <TextView
        android:id="@+id/tv_mytextnama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cc_myfoto"
        android:layout_centerHorizontal="true"
        android:text="@string/ammar_waly_majid"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorblack"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/tv_Myemail"
        android:layout_below="@id/tv_mytextnama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ammar_ma_student_amikom_ac_id"/>

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textStyle="bold"
        android:textColor="@color/ic_launcher_backgroundlogo"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@color/colorwhite"/>

</RelativeLayout>